# CDSSproMAX

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  QUICKSTART.md  README.md  docker-compose.yml  package.json  setup.cmd  start-dev.cmd  start-dev.ps1  stop-dev.cmd  stop-dev.ps1
apps/api/: alembic.ini  pyproject.toml
apps/api/scripts/: seed_bibliotheke.py
apps/api/src/: config.py  main.py
apps/api/src/agents/: __init__.py  a_agent.py  arbiter.py  base.py  diagnosis_agent.py  e_agent.py  inquiry_agent.py  m_agent.py  o_agent.py  pe_fusion.py  pipeline.py  s_agent.py  stage_registry.py  v_agent.py  vision_agent.py
apps/api/src/audit/: __init__.py  logger.py  schema.py
apps/api/src/core/: __init__.py  contract.py  registry.py  session_state.py
apps/api/src/db/: models.py  session.py
apps/api/src/db/migrations/: env.py
apps/api/src/db/migrations/versions/: 0001_initial.py  0002_vision.py  0003_physio.py  (+1 more)
apps/api/src/fusion/: __init__.py  classifier.py
apps/api/src/handout/: __init__.py  aggregator.py  generators.py  schema.py
apps/api/src/llm/: __init__.py  adapters.py  interface.py  pricing.py  router.py
apps/api/src/observability/: __init__.py  langfuse.py
apps/api/src/output/: __init__.py  keyfocus.py  narrative.py  orchestrator.py  radar.py  report.py  stress.py  weakness.py
apps/api/src/physio/: __init__.py  hrv.py
apps/api/src/rag/: __init__.py  bibliotheke.py  embedder.py  note.py  reranker.py
apps/api/src/routers/: admin.py  auth.py  cases.py  duat.py  grading.py  handout.py  health.py  physio.py  sessions.py  training.py  transcripts.py  vision.py
apps/api/src/rubric/: __init__.py  loader.py  schema.py
apps/api/src/scenario/: __init__.py  schema.py
apps/api/src/scoring/: __init__.py  realtime.py
apps/api/src/scoring/duat/: __init__.py  analyze.py  evaluate.py  flow.py  memory.py  observe.py  synthesize.py  verification.py
apps/api/src/services/: llm_clients.py  storage.py
apps/api/src/signals/: __init__.py  expression.py  hrv.py  pause.py
apps/api/src/vision/: __init__.py  anatomy_map.py  frame_capture.py  marker_detector.py
apps/api/tests/: test_admin_router.py  test_agents_shells.py  test_arbiter.py  test_audit_logger.py  test_auth_token.py  test_core_contract.py  test_e2e_live.py  test_e2e_live_README.md  test_grading_router.py  test_handout_aggregator.py  test_handout_generators.py  test_health.py  test_hrv.py  test_llm_clients.py  test_llm_router.py  test_pe_fusion.py  test_pe_pipeline_integration.py  test_pipeline.py  test_rag.py  test_rubric_loader.py  test_sessions_complete.py  test_storage.py  test_v_agent.py  test_v_agent_multimodal.py  test_vision_anatomy_map.py  test_vision_marker_detector.py
apps/asr/: Dockerfile  pyproject.toml
apps/asr/src/: breeze.py  config.py  main.py
apps/asr/tests/: test_stub_mode.py
evaluation/: README.md  groups.py  metrics.py  pyproject.toml  run_ablation.py  schema.py
evaluation/golden_sessions/: example.jsonl
evaluation/tests/: test_metrics.py  test_run_ablation_mock.py
(+181 files in other folders)
