[project]
name = "ticdss-api"
version = "0.1.0"
description = "TICDSS FastAPI backend — DUAT five-agent OSCE assessment"
readme = "../../README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # DB
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    # LLM SDKs
    "anthropic>=0.86.0",
    "google-genai>=1.0.0",
    # RAG
    "sentence-transformers>=3.3.0",
    # Observability
    "langfuse>=2.50.0",
    # Auth
    "pyjwt>=2.10.0",
    "bcrypt>=4.2.0",
    # Misc
    "python-multipart>=0.0.18",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
# Wave 1.5 — vision layer. Install with `uv sync --extra vision`.
vision = [
    "opencv-python>=4.10.0",
    "numpy>=1.26.0",
    "reportlab>=4.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
