[project]
name = "ticdss-asr"
version = "0.1.0"
description = "Breeze-ASR-25 local speech-to-text service for TICDSS"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.18",
    # GPU stack — keep transformers + torch unpinned in pyproject so the user
    # can choose the matching CUDA wheel (e.g. via uv pip install with --extra-index-url).
    "transformers>=4.46.0",
    "torch>=2.5.0",
    "torchaudio>=2.5.0",
    "accelerate>=1.1.0",
    "soundfile>=0.12.0",
    "numpy>=1.26.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
